refinements/Parser.fsyacc.output
Output file describing compiled parser placed in refinements/Parser.fs and refinements/Parser.fsi
------------------------
states = 
state 0:
  items:
    _startstart ->  . start

  actions:
    action 'EOF' (noprec):   error
    action 'TUP' (noprec):   error
    action 'CTOR_ALONE' (noprec):   error
    action 'CTOR_ARG' (noprec):   error
    action 'P4' (noprec):   error
    action 'P3' (noprec):   error
    action 'P2' (noprec):   error
    action 'P1' (noprec):   error
    action 'OR' (noprec):   error
    action 'AND' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'PIPE' (noprec):   error
    action 'STAR' (noprec):   error
    action 'COLON' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'REFINES' (noprec):   error
    action 'HOLE' (noprec):   error
    action 'WITH' (noprec):   error
    action 'NOT' (noprec):   error
    action 'UNIT' (noprec):   error
    action 'REC' (noprec):   error
    action 'LET' (noprec):   shift 20
    action 'OF' (noprec):   error
    action 'TYPE' (noprec):   shift 3
    action 'MATCH' (noprec):   error
    action 'FUN' (noprec):   error
    action 'TICK' (noprec):   error
    action 'PROJ' (noprec):   error
    action 'UID' (noprec):   error
    action 'LID' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto start: 1
    goto decls: 2
    goto let_head: 47
    goto let_rec_head: 30

state 1:
  items:
    _startstart -> start . 

  actions:
    action 'EOF' (noprec):   accept
    action 'TUP' (noprec):   accept
    action 'CTOR_ALONE' (noprec):   accept
    action 'CTOR_ARG' (noprec):   accept
    action 'P4' (noprec):   accept
    action 'P3' (noprec):   accept
    action 'P2' (noprec):   accept
    action 'P1' (noprec):   accept
    action 'OR' (noprec):   accept
    action 'AND' (noprec):   accept
    action 'SEMI' (noprec):   accept
    action 'RBRACKET' (noprec):   accept
    action 'LBRACKET' (noprec):   accept
    action 'RPAREN' (noprec):   accept
    action 'LPAREN' (noprec):   accept
    action 'PIPE' (noprec):   accept
    action 'STAR' (noprec):   accept
    action 'COLON' (noprec):   accept
    action 'COMMA' (noprec):   accept
    action 'ARROW' (noprec):   accept
    action 'EQUAL' (noprec):   accept
    action 'REFINES' (noprec):   accept
    action 'HOLE' (noprec):   accept
    action 'WITH' (noprec):   accept
    action 'NOT' (noprec):   accept
    action 'UNIT' (noprec):   accept
    action 'REC' (noprec):   accept
    action 'LET' (noprec):   accept
    action 'OF' (noprec):   accept
    action 'TYPE' (noprec):   accept
    action 'MATCH' (noprec):   accept
    action 'FUN' (noprec):   accept
    action 'TICK' (noprec):   accept
    action 'PROJ' (noprec):   accept
    action 'UID' (noprec):   accept
    action 'LID' (noprec):   accept
    action 'INT' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    start -> decls . 

  actions:
    action 'EOF' (noprec):   reduce start --> decls
    action 'TUP' (noprec):   reduce start --> decls
    action 'CTOR_ALONE' (noprec):   reduce start --> decls
    action 'CTOR_ARG' (noprec):   reduce start --> decls
    action 'P4' (noprec):   reduce start --> decls
    action 'P3' (noprec):   reduce start --> decls
    action 'P2' (noprec):   reduce start --> decls
    action 'P1' (noprec):   reduce start --> decls
    action 'OR' (noprec):   reduce start --> decls
    action 'AND' (noprec):   reduce start --> decls
    action 'SEMI' (noprec):   reduce start --> decls
    action 'RBRACKET' (noprec):   reduce start --> decls
    action 'LBRACKET' (noprec):   reduce start --> decls
    action 'RPAREN' (noprec):   reduce start --> decls
    action 'LPAREN' (noprec):   reduce start --> decls
    action 'PIPE' (noprec):   reduce start --> decls
    action 'STAR' (noprec):   reduce start --> decls
    action 'COLON' (noprec):   reduce start --> decls
    action 'COMMA' (noprec):   reduce start --> decls
    action 'ARROW' (noprec):   reduce start --> decls
    action 'EQUAL' (noprec):   reduce start --> decls
    action 'REFINES' (noprec):   reduce start --> decls
    action 'HOLE' (noprec):   reduce start --> decls
    action 'WITH' (noprec):   reduce start --> decls
    action 'NOT' (noprec):   reduce start --> decls
    action 'UNIT' (noprec):   reduce start --> decls
    action 'REC' (noprec):   reduce start --> decls
    action 'LET' (noprec):   reduce start --> decls
    action 'OF' (noprec):   reduce start --> decls
    action 'TYPE' (noprec):   reduce start --> decls
    action 'MATCH' (noprec):   reduce start --> decls
    action 'FUN' (noprec):   reduce start --> decls
    action 'TICK' (noprec):   reduce start --> decls
    action 'PROJ' (noprec):   reduce start --> decls
    action 'UID' (noprec):   reduce start --> decls
    action 'LID' (noprec):   reduce start --> decls
    action 'INT' (noprec):   reduce start --> decls
    action 'error' (noprec):   reduce start --> decls
    action '#' (noprec):   reduce start --> decls
    action '$$' (noprec):   reduce start --> decls

  immediate action:   reduce start --> decls
 gotos:

state 3:
  items:
    decls -> 'TYPE' . 'LID' 'EQUAL' type_ctor_one decls
    decls -> 'TYPE' . 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    decls -> 'TYPE' . 'LPAREN' tick_comma_one 'RPAREN' 'LID' 'EQUAL' type_ctor_one decls

  actions:
    action 'EOF' (noprec):   error
    action 'TUP' (noprec):   error
    action 'CTOR_ALONE' (noprec):   error
    action 'CTOR_ARG' (noprec):   error
    action 'P4' (noprec):   error
    action 'P3' (noprec):   error
    action 'P2' (noprec):   error
    action 'P1' (noprec):   error
    action 'OR' (noprec):   error
    action 'AND' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'LPAREN' (noprec):   shift 13
    action 'PIPE' (noprec):   error
    action 'STAR' (noprec):   error
    action 'COLON' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'REFINES' (noprec):   error
    action 'HOLE' (noprec):   error
    action 'WITH' (noprec):   error
    action 'NOT' (noprec):   error
    action 'UNIT' (noprec):   error
    action 'REC' (noprec):   error
    action 'LET' (noprec):   error
    action 'OF' (noprec):   error
    action 'TYPE' (noprec):   error
    action 'MATCH' (noprec):   error
    action 'FUN' (noprec):   error
    action 'TICK' (noprec):   shift 8
    action 'PROJ' (noprec):   error
    action 'UID' (noprec):   error
    action 'LID' (noprec):   shift 4
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 4:
  items:
    decls -> 'TYPE' 'LID' . 'EQUAL' type_ctor_one decls

  actions:
    action 'EOF' (noprec):   error
    action 'TUP' (noprec):   error
    action 'CTOR_ALONE' (noprec):   error
    action 'CTOR_ARG' (noprec):   error
    action 'P4' (noprec):   error
    action 'P3' (noprec):   error
    action 'P2' (noprec):   error
    action 'P1' (noprec):   error
    action 'OR' (noprec):   error
    action 'AND' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'PIPE' (noprec):   error
    action 'STAR' (noprec):   error
    action 'COLON' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'EQUAL' (noprec):   shift 5
    action 'REFINES' (noprec):   error
    action 'HOLE' (noprec):   error
    action 'WITH' (noprec):   error
    action 'NOT' (noprec):   error
    action 'UNIT' (noprec):   error
    action 'REC' (noprec):   error
    action 'LET' (noprec):   error
    action 'OF' (noprec):   error
    action 'TYPE' (noprec):   error
    action 'MATCH' (noprec):   error
    action 'FUN' (noprec):   error
    action 'TICK' (noprec):   error
    action 'PROJ' (noprec):   error
    action 'UID' (noprec):   error
    action 'LID' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 5:
  items:
    decls -> 'TYPE' 'LID' 'EQUAL' . type_ctor_one decls

  actions:
    action 'EOF' (noprec):   error
    action 'TUP' (noprec):   error
    action 'CTOR_ALONE' (noprec):   error
    action 'CTOR_ARG' (noprec):   error
    action 'P4' (noprec):   error
    action 'P3' (noprec):   error
    action 'P2' (noprec):   error
    action 'P1' (noprec):   error
    action 'OR' (noprec):   error
    action 'AND' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'PIPE' (noprec):   shift 60
    action 'STAR' (noprec):   error
    action 'COLON' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'REFINES' (noprec):   error
    action 'HOLE' (noprec):   error
    action 'WITH' (noprec):   error
    action 'NOT' (noprec):   error
    action 'UNIT' (noprec):   error
    action 'REC' (noprec):   error
    action 'LET' (noprec):   error
    action 'OF' (noprec):   error
    action 'TYPE' (noprec):   error
    action 'MATCH' (noprec):   error
    action 'FUN' (noprec):   error
    action 'TICK' (noprec):   error
    action 'PROJ' (noprec):   error
    action 'UID' (noprec):   error
    action 'LID' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto type_ctor_one: 6
    goto type_ctor: 58

state 6:
  items:
    decls -> 'TYPE' 'LID' 'EQUAL' type_ctor_one . decls
    type_ctor_one -> type_ctor_one . type_ctor

  actions:
    action 'EOF' (noprec):   error
    action 'TUP' (noprec):   error
    action 'CTOR_ALONE' (noprec):   error
    action 'CTOR_ARG' (noprec):   error
    action 'P4' (noprec):   error
    action 'P3' (noprec):   error
    action 'P2' (noprec):   error
    action 'P1' (noprec):   error
    action 'OR' (noprec):   error
    action 'AND' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'PIPE' (noprec):   shift 60
    action 'STAR' (noprec):   error
    action 'COLON' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'REFINES' (noprec):   error
    action 'HOLE' (noprec):   error
    action 'WITH' (noprec):   error
    action 'NOT' (noprec):   error
    action 'UNIT' (noprec):   error
    action 'REC' (noprec):   error
    action 'LET' (noprec):   shift 20
    action 'OF' (noprec):   error
    action 'TYPE' (noprec):   shift 3
    action 'MATCH' (noprec):   error
    action 'FUN' (noprec):   error
    action 'TICK' (noprec):   error
    action 'PROJ' (noprec):   error
    action 'UID' (noprec):   error
    action 'LID' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto decls: 7
    goto type_ctor: 59
    goto let_head: 47
    goto let_rec_head: 30

state 7:
  items:
    decls -> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls . 

  actions:
    action 'EOF' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'TUP' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'CTOR_ALONE' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'CTOR_ARG' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'P4' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'P3' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'P2' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'P1' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'OR' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'AND' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'SEMI' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'RBRACKET' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'LBRACKET' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'RPAREN' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'LPAREN' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'PIPE' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'STAR' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'COLON' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'COMMA' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'ARROW' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'EQUAL' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'REFINES' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'HOLE' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'WITH' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'NOT' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'UNIT' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'REC' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'LET' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'OF' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'TYPE' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'MATCH' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'FUN' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'TICK' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'PROJ' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'UID' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'LID' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'INT' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action 'error' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action '#' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
    action '$$' (noprec):   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls

  immediate action:   reduce decls --> 'TYPE' 'LID' 'EQUAL' type_ctor_one decls
 gotos:

state 8:
  items:
    decls -> 'TYPE' 'TICK' . 'LID' 'EQUAL' type_ctor_one decls

  actions:
    action 'EOF' (noprec):   error
    action 'TUP' (noprec):   error
    action 'CTOR_ALONE' (noprec):   error
    action 'CTOR_ARG' (noprec):   error
    action 'P4' (noprec):   error
    action 'P3' (noprec):   error
    action 'P2' (noprec):   error
    action 'P1' (noprec):   error
    action 'OR' (noprec):   error
    action 'AND' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'PIPE' (noprec):   error
    action 'STAR' (noprec):   error
    action 'COLON' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'REFINES' (noprec):   error
    action 'HOLE' (noprec):   error
    action 'WITH' (noprec):   error
    action 'NOT' (noprec):   error
    action 'UNIT' (noprec):   error
    action 'REC' (noprec):   error
    action 'LET' (noprec):   error
    action 'OF' (noprec):   error
    action 'TYPE' (noprec):   error
    action 'MATCH' (noprec):   error
    action 'FUN' (noprec):   error
    action 'TICK' (noprec):   error
    action 'PROJ' (noprec):   error
    action 'UID' (noprec):   error
    action 'LID' (noprec):   shift 9
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 9:
  items:
    decls -> 'TYPE' 'TICK' 'LID' . 'EQUAL' type_ctor_one decls

  actions:
    action 'EOF' (noprec):   error
    action 'TUP' (noprec):   error
    action 'CTOR_ALONE' (noprec):   error
    action 'CTOR_ARG' (noprec):   error
    action 'P4' (noprec):   error
    action 'P3' (noprec):   error
    action 'P2' (noprec):   error
    action 'P1' (noprec):   error
    action 'OR' (noprec):   error
    action 'AND' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'PIPE' (noprec):   error
    action 'STAR' (noprec):   error
    action 'COLON' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'EQUAL' (noprec):   shift 10
    action 'REFINES' (noprec):   error
    action 'HOLE' (noprec):   error
    action 'WITH' (noprec):   error
    action 'NOT' (noprec):   error
    action 'UNIT' (noprec):   error
    action 'REC' (noprec):   error
    action 'LET' (noprec):   error
    action 'OF' (noprec):   error
    action 'TYPE' (noprec):   error
    action 'MATCH' (noprec):   error
    action 'FUN' (noprec):   error
    action 'TICK' (noprec):   error
    action 'PROJ' (noprec):   error
    action 'UID' (noprec):   error
    action 'LID' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 10:
  items:
    decls -> 'TYPE' 'TICK' 'LID' 'EQUAL' . type_ctor_one decls

  actions:
    action 'EOF' (noprec):   error
    action 'TUP' (noprec):   error
    action 'CTOR_ALONE' (noprec):   error
    action 'CTOR_ARG' (noprec):   error
    action 'P4' (noprec):   error
    action 'P3' (noprec):   error
    action 'P2' (noprec):   error
    action 'P1' (noprec):   error
    action 'OR' (noprec):   error
    action 'AND' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'PIPE' (noprec):   shift 60
    action 'STAR' (noprec):   error
    action 'COLON' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'REFINES' (noprec):   error
    action 'HOLE' (noprec):   error
    action 'WITH' (noprec):   error
    action 'NOT' (noprec):   error
    action 'UNIT' (noprec):   error
    action 'REC' (noprec):   error
    action 'LET' (noprec):   error
    action 'OF' (noprec):   error
    action 'TYPE' (noprec):   error
    action 'MATCH' (noprec):   error
    action 'FUN' (noprec):   error
    action 'TICK' (noprec):   error
    action 'PROJ' (noprec):   error
    action 'UID' (noprec):   error
    action 'LID' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto type_ctor_one: 11
    goto type_ctor: 58

state 11:
  items:
    decls -> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one . decls
    type_ctor_one -> type_ctor_one . type_ctor

  actions:
    action 'EOF' (noprec):   error
    action 'TUP' (noprec):   error
    action 'CTOR_ALONE' (noprec):   error
    action 'CTOR_ARG' (noprec):   error
    action 'P4' (noprec):   error
    action 'P3' (noprec):   error
    action 'P2' (noprec):   error
    action 'P1' (noprec):   error
    action 'OR' (noprec):   error
    action 'AND' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'PIPE' (noprec):   shift 60
    action 'STAR' (noprec):   error
    action 'COLON' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'REFINES' (noprec):   error
    action 'HOLE' (noprec):   error
    action 'WITH' (noprec):   error
    action 'NOT' (noprec):   error
    action 'UNIT' (noprec):   error
    action 'REC' (noprec):   error
    action 'LET' (noprec):   shift 20
    action 'OF' (noprec):   error
    action 'TYPE' (noprec):   shift 3
    action 'MATCH' (noprec):   error
    action 'FUN' (noprec):   error
    action 'TICK' (noprec):   error
    action 'PROJ' (noprec):   error
    action 'UID' (noprec):   error
    action 'LID' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto decls: 12
    goto type_ctor: 59
    goto let_head: 47
    goto let_rec_head: 30

state 12:
  items:
    decls -> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls . 

  actions:
    action 'EOF' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'TUP' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'CTOR_ALONE' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'CTOR_ARG' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'P4' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'P3' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'P2' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'P1' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'OR' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'AND' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'SEMI' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'RBRACKET' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'LBRACKET' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'RPAREN' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'LPAREN' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'PIPE' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'STAR' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'COLON' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'COMMA' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'ARROW' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'EQUAL' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'REFINES' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'HOLE' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'WITH' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'NOT' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'UNIT' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'REC' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'LET' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'OF' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'TYPE' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'MATCH' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'FUN' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'TICK' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'PROJ' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'UID' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'LID' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'INT' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action 'error' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action '#' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
    action '$$' (noprec):   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls

  immediate action:   reduce decls --> 'TYPE' 'TICK' 'LID' 'EQUAL' type_ctor_one decls
 gotos:

state 13:
  items:
    decls -> 'TYPE' 'LPAREN' . tick_comma_one 'RPAREN' 'LID' 'EQUAL' type_ctor_one decls

  actions:
    action 'EOF' (noprec):   error
    action 'TUP' (noprec):   error
    action 'CTOR_ALONE' (noprec):   error
    action 'CTOR_ARG' (noprec):   error
    action 'P4' (noprec):   error
    action 'P3' (noprec):   error
    action 'P2' (noprec):   error
    action 'P1' (noprec):   error
    action 'OR' (noprec):   error
    action 'AND' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'RBRACKET' (noprec):   error
    action 'LBRACKET' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'PIPE' (noprec):   error
    action 'STAR' (noprec):   error
    action 'COLON' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'ARROW' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'REFINES' (noprec):   error
    action 'HOLE' (noprec):   error
    action 'WITH' (noprec):   error
    action 'NOT' (noprec):   error
    action 'UNIT' (noprec):   error
    action 'REC' (noprec):   error
    action 'LET' (noprec):   error
    action 'OF' (noprec):   error
    action 'TYPE' (noprec):   error
    action 'MATCH' (noprec):   error
    action 'FUN' (noprec):   error
    action 'TICK' (noprec):   shift 67
    action 'PROJ' (noprec):   error
    action 'UID' (noprec):   error
    action 'LID' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto tick_comma_one: 14
    goto tick_comma: 64

state 14:
  items:
    decls -> 'TYPE' 'LPAREN' tick_comma_one . 'RPAREN' 'LID' 'EQUAL' type_ctor_one decls
